--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# target
-/terget/
+# ignore files 
+target/
+.classpath
+.project
+.settings
 
 # Compiled class file
 *.class
@@ -21,6 +24,3 @@
 *.zip
 *.tar.gz
 *.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
